# FirstRenderer

./: .gitignore  CMakeLists.txt  compact_algorithm.txt  compress_test.py  main.cu
classes/: vertex_triangle.cuh
core/: geometry.cuh  geometry.h  pixels.cuh  rasterization.cuh
